--- a/src/app/textedit/textedit.component.html
+++ b/src/app/textedit/textedit.component.html
@@ -13,6 +13,6 @@
 </div>
 
 <textarea formControlName="textedit" id="textedit" 
-          name="textedit" [(ngModel)]="text">
+          name="textedit">
 </textarea>
 </form>
