--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-textedit (change)="onTextChange($event)" class="textarea"></app-textedit>
+<app-textedit (textChange)="onTextChange($event)" class="textarea"></app-textedit>
 <app-tree [treeData]="treeData" class="tree"></app-tree>
